<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/principalBlanco"
                android:orientation="vertical"
              android:id="@+id/layoutAñadir">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:text="@string/tvREGISTRAR_COCHES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/etCodigoR"
                android:id="@+id/etCodigo"/>
        <EditText
                android:id="@+id/etMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etMarcaR"/>

        <EditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etModeloR"/>

    </LinearLayout>

    <Button
            android:id="@+id/btAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btAñadirR"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

</RelativeLayout>