<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".BorrarFragment"
                android:background="@color/principalBlanco">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <TextView
                android:text="@string/tvBORRAR_COCHES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:id="@+id/tvBorrarCoche"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/etCodigoB"
                    android:id="@+id/etCodigoBorrar"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btBorrarB"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

</RelativeLayout>